--- a/Proposal_bearbeitet/TODO
+++ b/Proposal_bearbeitet/TODO
@@ -1,3 +1,4 @@
 - Rank System muss noch erwähnt werden
 - Einzelne Labels, Vorgang beschreiben
 - ggf. Referenzen ergänzen
+- Indexing der Database Einträge
