--- a/Proposal_bearbeitet/Proposal_JD_bearbeitet.tex
+++ b/Proposal_bearbeitet/Proposal_JD_bearbeitet.tex
@@ -31,7 +31,7 @@ Alpha \\
 \vspace{2mm}
 \end{center}
 \begin{tabular}{ l c r }
-  Alexander Peikert & alexpeikert@uni-koblenz.de & xxxxxxxxx \\
+  Alexander Peikert & alexpeikert@uni-koblenz.de & 218200812 \\
   Clemens Steinmann & csteinmann@uni-koblenz.de & 218200209 \\
   Erwin Letkemann & erwinletkemann@uni-koblenz.de & xxxxxxxxx \\
   Julian Dillmann & juliandillmann@uni-koblenz.de & 218100919 \\
