--- a/Proposal_bearbeitet/Proposal_JD_bearbeitet.tex
+++ b/Proposal_bearbeitet/Proposal_JD_bearbeitet.tex
@@ -33,7 +33,7 @@ Alpha \\
 \begin{tabular}{ l c r }
   Alexander Peikert & alexpeikert@uni-koblenz.de & 218200812 \\
   Clemens Steinmann & csteinmann@uni-koblenz.de & 218200209 \\
-  Erwin Letkemann & erwinletkemann@uni-koblenz.de & xxxxxxxxx \\
+  Erwin Letkemann & erwinletkemann@uni-koblenz.de & 218200352 \\
   Julian Dillmann & juliandillmann@uni-koblenz.de & 218100919 \\
 \end{tabular}
 \vfill
