--- a/Proposal_bearbeitet/Proposal_JD_bearbeitet.tex
+++ b/Proposal_bearbeitet/Proposal_JD_bearbeitet.tex
@@ -54,11 +54,11 @@ Germany \\
 %-------------------------
 
 \section{Introduction}
-The aim of the application is to extract content of published news articles and to assign them various \grqq{} Information nutritional labels\grqq{}, based on \ref{[1]}.\\
+The aim of the application is to extract content of published news articles and to assign them various \grqq{}Information nutritional labels\grqq{}, based on \ref{[1]}.\\
 The web application can be used by different kind of users:
 \begin{enumerate}
 \item Ordinary web users can find similar articles for a given news article. The received labels can help answering the question whether the article was trustworthy or not. If latter, the user can continue reading on the topic with articles from different sources suggested by the application.
-\item Other researchers and fake-checkers can use our application, especially the labels, as a basis on further research on automation of fact-checking.
+\item Other researchers and fact-checkers can use our application, especially the labels, as a basis on further research on automation of fact-checking.
 \end{enumerate}
 The labels we are focusing on will be at least 3 of the following: factuality / opinion, readability, emotion, controversy, credibility.
 
@@ -79,7 +79,7 @@ The labels we are focusing on will be at least 3 of the following: factuality / 
 Given an input URL to an English news article, the applications' database will check whether the url has already been checked or not.
 \begin{enumerate}
 \item If the news article is present in our database we will output the already calculated labels and the x-best matching articles in our database.
-\item Otherwise first the news article content extractor will crawl the html to extract the plaintext of the news article and second each of the labels will evaluated with corresponding natural language processing methods. The result will be added to the database witch leads us to 1.
+\item Otherwise the news article content extractor will crawl the html to extract the plaintext of the news article and each of the labels will be evaluated with corresponding natural language processing methods. The result will be added to the database which leads us to 1.
 \end{enumerate}
 
 \subsection{Qualities of the components}
@@ -91,7 +91,7 @@ Given an input URL to an English news article, the applications' database will c
 \end{itemize}
 
 \subsection{Basic ideas}
-most likely to change
+subject to change
 \begin{itemize}
 \item Factuality/ Opinion: \ref{[1]} NLP to calculate ratio of factual to opinion sentences.
 \item Readability:  \ref{[2]} use some existing algorithm on the text.
