--- a/Proposal_bearbeitet/new.tex
+++ b/Proposal_bearbeitet/new.tex
@@ -154,8 +154,8 @@ Given an input URL to an English news article, the applications' database will c
 \item Factuality/ Opinion: We think the ratio between factual and opinion sentences in an article helps as the quick reference for check worthiness;
 \ref{[1]} NLP to calculate the ratio of factual to opinion sentences over the article content.
 \item Emotion: We think that emotional language is used to influence the reader into believing certain stances; \ref{[3]}, \ref{[4]} NLP of sentences and sum over the text will tell the ratio of positive and negative emotions.
-\item Controversy: We think that controversial topics are more likely to be used as clickbait and may not showcase factual statements; checking for the number of included topics for example from Wikipedia:List of controversial issues".
-\item Credibility: As we are likely dealing with text from a big spectrum of topics, the reliability of the publisher of the article has to be considered too; checking the metadata with available resources like  "Wikipedia:Reliable sources/Perennial sources".
+\item Controversy: We think that controversial topics are more likely to be used as clickbait and may not showcase factual statements; checking for the number of included topics for example from "Wikipedia:List of controversial issues".
+\item Credibility: As we are likely dealing with text from a big spectrum of topics, the origin of the article has to be considered too; checking the metadata with available resources like  "Wikipedia:Reliable sources/Perennial sources" to find reliable sources.
 \item Technicality: We think an overall technical text could be used to distract from non factual statements; - .
 \item Virality: We think viral topics are more likely to have contradicting statements between sources; Use google trends for detection.
 \end{itemize}
