--- a/Proposal_bearbeitet/new.tex
+++ b/Proposal_bearbeitet/new.tex
@@ -163,8 +163,9 @@ The following labels should be considered for the estimation of the check worthi
 \item Emotion: high usage emotional language can be used to deceive consumers therefore increasing check worthiness;
 \ref{[3]}, \ref{[4]} NLP of sentences and sum over the text will tell the ratio of positive and negative emotions.
 \item Controversy: Hence the nature of contradicting viewpoints, the interest to check for factual content increases;
-comparing keywords in the article context to known controversial topics to determine the number of controversial topics in the article.
-\item Credibility of the source: As we are likely dealing with text from a big spectrum of topics, the origin of the article has to be considered too; checking the metadata with available resources like "Wikipedia:Reliable sources/Perennial sources" to find out if we are have a reliable sources.
+comparing topics per paragraph in the article to known controversial topics to determine the number of controversial topics over the text.
+\item Credibility of the source: As we are likely dealing with text from a big spectrum of topics, the origin of the article has to be considered too;
+checking the metadata with available resources like "Wikipedia:Reliable sources/Perennial sources" to find out if we are have a reliable sources.
 \item Virality: viral topics should be considered as these topics circulate quicker, which leads bigger spread of miss information if not verified.
 \end{itemize}
 
